<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:background="#ffffff">

    <ImageView
            android:id="@+id/aboutPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:src="@drawable/echo_icon"
            android:contentDescription="@string/app_name"/>

    <TextView
            android:id="@+id/developerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/aboutPic"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/developer"
            android:textStyle="bold"
            android:textColor="#360951"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAllCaps="true"
            android:layout_marginBottom="8dp"/>

    <TextView
            android:id="@+id/credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/developerName"
            android:layout_centerHorizontal="true"
            android:text="@string/credits"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="normal"
            android:layout_marginBottom="8dp"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/credits"
            android:text="@string/app_version"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"/>

</RelativeLayout>